[easy_install]
index-url = https://pypi.org/simple

[metadata]
license_file = LICENSE.md
description-file = README.md

[options.extras_require]
docs =
    sphinx==2.4.3
    sphinx_rtd_theme==0.4.3
    sphinxcontrib-napoleon==0.7
    recommonmark==0.6.0
cli =
    click==8.1.6
[options.entry_points]
console_scripts =
    archer_tools=archer_tools.cli:cli [cli]
plugin_source_types =
    archer=archer_tools.remote.archer:ArcherSourceAndDestination
    ldap=archer_tools.remote.ldap:LdapSource
    manual=archer_tools.remote.manual:ManualSource
plugin_destination_types =
    archer=archer_tools.remote.archer:ArcherSourceAndDestination
[commitizen]
version = 0.0.1
files = [
	"setup.py:version",
	"archer_tools/__init__.py:version"]
tag_format = v$version
